contrast correction

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -1,7 +1,7 @@
 /* ========= VARIABLES ========= */
 :root {
   --primary-color: #3D405B;
-  --secondary-color: #E07A5F;
+  --secondary-color: #742A16;
   --light-color: #F4F1DE;
   --text-font: 'Inter', sans-serif;
   --title-font: 'Momo Trust Display', cursive;
